# dor_mapping_pin_request_api_mirrored

./: .gitignore  README.md  Workflows for Pin Application.docx  pyproject.toml  requirements.txt
dor_mapping/: Duplicate and NULL PINs.sql  __init__.py  bp.py  db.py  pin_request_creation.sql  postgres_code.py  postgres_sde.py  utils.py
dor_mapping/static/: styles.css
dor_mapping/templates/: layout.html
dor_mapping/templates/auth/: login.html  record.html  result.html
